--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muzman/muzman-framework",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "expressjs,nodejs",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "clean": "del ./build/*",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "pub": "git add . && git commit -m 'updates ' && npm version patch && npm run build && npm publish"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,14 @@
   "devDependencies": {
     "del-cli": "^5.1.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.46",
+    "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
+    "cookie-session": "^2.0.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
