--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muzman/muzman-framework",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "expressjs,nodejs",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "del ./build/*",
     "build": "npm run clean && tsc",
-    "pub": "git add . && git commit -m 'updates ' && npm version patch && npm run build && npm publish"
+    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish"
   },
   "repository": {
     "type": "git",
