--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node"
   ],
   "author": "muzman01",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/muzman01/express-custom-middlewares/issues"
   },
