--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muzman/muzman-framework",
-  "version": "1.0.17",
+  "version": "1.0.16",
   "description": "expressjs,nodejs",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -40,6 +40,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
     "node-nats-streaming": "^0.3.2"
   }
 }
